[GEF] Use non-deprecated Java objects
- Integer.valueOf
- Boolean.valueOf
- Double.valueOf