@@ -425,15 +425,14 @@ public abstract class Shape extends Figure {
     /**
      * @since 3.5
      */
-    @SuppressWarnings("deprecation")
     public void setAlpha(int value) {
         if (alpha != null) {
             if (alpha.intValue() != value) {
-                alpha = new Integer(value);
+                alpha = Integer.valueOf(value);
                 repaint();
             }
         } else {
-            alpha = new Integer(value);
+            alpha = Integer.valueOf(value);
             repaint();
         }
     }
@@ -458,15 +457,14 @@ public abstract class Shape extends Figure {
     /**
      * @since 3.5
      */
-    @SuppressWarnings("deprecation")
     public void setAntialias(int value) {
         if (antialias != null) {
             if (antialias.intValue() != value) {
-                antialias = new Integer(value);
+                antialias = Integer.valueOf(value);
                 repaint();
             }
         } else {
-            antialias = new Integer(value);
+            antialias = Integer.valueOf(value);
             repaint();
         }
     }
