@@ -280,7 +280,6 @@ public class SnapToGeometry extends SnapToHelper {
      *            which sides should be considered
      * @return the correction or #getThreshold () if no correction was made
      */
-    @SuppressWarnings("deprecation")
     protected double getCorrectionFor(Entry entries[], Map extendedData,
             boolean vert, double value, int side) {
         double resultMag = getThreshold();
@@ -301,21 +300,21 @@ public class SnapToGeometry extends SnapToHelper {
                 if (magnitude < resultMag) {
                     resultMag = magnitude;
                     result = entry.location - value;
-                    extendedData.put(property, new Integer(entry.location));
+                    extendedData.put(property, Integer.valueOf(entry.location));
                 }
             } else if (entry.type == 0 && side == 0) {
                 magnitude = Math.abs(value - entry.location);
                 if (magnitude < resultMag) {
                     resultMag = magnitude;
                     result = entry.location - value;
-                    extendedData.put(property, new Integer(entry.location));
+                    extendedData.put(property, Integer.valueOf(entry.location));
                 }
             } else if (entry.type == 1 && side != 0) {
                 magnitude = Math.abs(value - entry.location);
                 if (magnitude < resultMag) {
                     resultMag = magnitude;
                     result = entry.location - value;
-                    extendedData.put(property, new Integer(entry.location));
+                    extendedData.put(property, Integer.valueOf(entry.location));
                 }
             }
         }
