@@ -525,7 +525,6 @@ public class ToolbarDropdownContributionItem extends ContributionItem {
      *            the name of the property, or <code>null</code> meaning all
      *            applicable properties
      */
-    @SuppressWarnings("deprecation")
     @Override
     public void update(String propertyName) {
         if (widget != null) {
@@ -602,7 +601,7 @@ public class ToolbarDropdownContributionItem extends ContributionItem {
                                     && (label.length() + 1 < text.length()))
                                 accText = text.substring(label.length() + 1);
                             if (acc == null)
-                                acc = new Integer(action.getAccelerator());
+                                acc = Integer.valueOf(action.getAccelerator());
                             if (acc.intValue() >= 0)
                                 mi.setAccelerator(acc.intValue());
                             if (accText == null)
