@@ -26,7 +26,7 @@ import org.eclipse.gef.tools.SimpleDragTracker;
 /**
  * @author Pratik Shah
  */
-@SuppressWarnings({"rawtypes", "deprecation"})
+@SuppressWarnings("rawtypes")
 public class RulerDragTracker extends SimpleDragTracker {
 
     protected RulerEditPart source;
@@ -163,7 +163,7 @@ public class RulerDragTracker extends SimpleDragTracker {
         if (guideline.getParent() == null) {
             source.getGuideLayer().add(guideline);
         }
-        source.setLayoutConstraint(null, guide, new Integer(
+        source.setLayoutConstraint(null, guide, Integer.valueOf(
                 getCurrentPositionZoomed()));
         Rectangle bounds = Rectangle.SINGLETON;
         if (source.isHorizontal()) {
