@@ -67,7 +67,6 @@ public class DomainEventDispatcher extends SWTEventDispatcher {
      */
     protected class EditPartAccessibilityDispatcher extends
             AccessibilityDispatcher {
-        @SuppressWarnings("deprecation")
         private AccessibleEditPart get(int childID) {
             if (childID == ACC.CHILDID_SELF || childID == ACC.CHILDID_NONE)
                 if (getViewer().getContents() != null)
@@ -75,7 +74,7 @@ public class DomainEventDispatcher extends SWTEventDispatcher {
                             .getAdapter(AccessibleEditPart.class);
                 else
                     return null;
-            return (AccessibleEditPart) accessibles.get(new Integer(childID));
+            return (AccessibleEditPart) accessibles.get(Integer.valueOf(childID));
         }
 
         /**
@@ -488,14 +487,12 @@ public class DomainEventDispatcher extends SWTEventDispatcher {
         return domain != null;
     }
 
-    @SuppressWarnings("deprecation")
     void putAccessible(AccessibleEditPart acc) {
-        accessibles.put(new Integer(acc.getAccessibleID()), acc);
+        accessibles.put(Integer.valueOf(acc.getAccessibleID()), acc);
     }
 
-    @SuppressWarnings("deprecation")
     void removeAccessible(AccessibleEditPart acc) {
-        accessibles.remove(new Integer(acc.getAccessibleID()));
+        accessibles.remove(Integer.valueOf(acc.getAccessibleID()));
     }
 
     /**
