@@ -258,13 +258,12 @@ class Splitter extends Composite {
                     area.y, getSashWidth(), area.height);
     }
 
-    @SuppressWarnings("deprecation")
     public void maintainSize(Control c) {
         Control[] controls = getControls(false);
         for (int i = 0; i < controls.length; i++) {
             Control ctrl = controls[i];
             if (ctrl == c) {
-                ctrl.setData(MAINTAIN_SIZE, new Boolean(true));
+                ctrl.setData(MAINTAIN_SIZE, Boolean.valueOf(true));
                 break;
             }
         }
